--- a/apps/labrinth/k8s/overlays/local/kustomization.yaml
+++ b/apps/labrinth/k8s/overlays/local/kustomization.yaml
@@ -1,8 +1,14 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
+  - ../../scopes/apis
   - ../../scopes/auth
-  - ../../scopes/api-v3
+  - ../../scopes/billing
+  - ../../scopes/friends
+  - ../../scopes/teams
+  - ../../scopes/version_files
+  - ../../scopes/webhooks
+  - ../../scopes/websocket
   - ./gateway.yaml
 components:
   - ./image-config
