--- a/.github/workflows/frontend-preview.yml
+++ b/.github/workflows/frontend-preview.yml
@@ -15,6 +15,7 @@ jobs:
   deploy:
     if: github.repository_owner == 'modrinth' && github.event.pull_request.head.repo.full_name == github.repository
     uses: ./.github/workflows/frontend-deploy.yml
+    secrets: inherit
     strategy:
       matrix:
         environment: [staging-preview, production-preview]
