build: deploy on both environments (#5129)
* build: deploy on both environments

* build: missing whitespace

* build: add path filter

* build: add sentry env

* build: inherit secrets

* remove if check

* Revert "remove if check"

This reverts commit b2ffe1d611269ddaf13bdbfacfdb89cd40316c29.

* remove if check 2

* Fix Wrangler env

* Fix Wrangler env but for real this time

* Alternative method of getting URLs

* Check for environment instead

* Fix comment

* Clickable commit

* Set PREVIEW build var

* Fix commit shown in comment

* Fix linting errors

* )

* add preview banner

* prepr

* prepr again

* ..

---------

Co-authored-by: Prospector <6166773+Prospector@users.noreply.github.com>

--- a/turbo.jsonc
+++ b/turbo.jsonc
@@ -15,6 +15,8 @@
 				"NODE_ENV",
 				"SITE_URL",
 				"BASE_URL",
+				"PREVIEW",
+				"BUILD_ENV",
 				"FLAG_OVERRIDES",
 				"BROWSER_BASE_URL",
 				"RATE_LIMIT_IGNORE_KEY",
@@ -32,7 +34,9 @@
 				"RUST_*",
 				"RUSTFLAGS",
 				"FORCE_COLOR",
-				"NEXTEST_*"
+				"NEXTEST_*",
+				"BUILD_ENV",
+				"PREVIEW"
 			]
 		},
 		"lint": {
