--- a/apps/frontend/wrangler.jsonc
+++ b/apps/frontend/wrangler.jsonc
@@ -29,6 +29,9 @@
 	"version_metadata": {
 		"binding": "CF_VERSION_METADATA"
 	},
+  "placement": {
+    "mode": "smart"
+  },
 	"vars": {
 		"ENVIRONMENT": "production",
 		"SENTRY_ENVIRONMENT": "production",
