--- a/packages/modrinth-log/Cargo.toml
+++ b/packages/modrinth-log/Cargo.toml
@@ -7,9 +7,13 @@ repository.workspace = true
 [dependencies]
 dotenvy = { workspace = true }
 eyre = { workspace = true }
+sentry = { workspace = true, optional = true, features = ["tracing"] }
 tracing = { workspace = true }
 tracing-ecs = { workspace = true }
 tracing-subscriber = { workspace = true }
+
+[features]
+sentry = ["dep:sentry"]
 
 [lints]
 workspace = true
