--- a/apps/labrinth/.env.local
+++ b/apps/labrinth/.env.local
@@ -1,6 +1,7 @@
 DEBUG=true
 RUST_LOG=info,sqlx::query=warn
 SENTRY_DSN=none
+SENTRY_ENVIRONMENT=development
 
 SITE_URL=http://localhost:3000
 # This CDN URL matches the local storage backend set below, which uses MOCK_FILE_PATH
