--- a/Cargo.toml
+++ b/Cargo.toml
@@ -164,6 +164,7 @@ sha2 = "0.10.9"
 shlex = "1.3.0"
 spdx = "0.12.0"
 sqlx = { version = "0.8.6", default-features = false }
+sqlx-tracing = { path = "packages/sqlx-tracing" }
 strum = "0.27.2"
 sysinfo = { version = "0.37.2", default-features = false }
 tar = "0.4.44"
