--- a/Cargo.toml
+++ b/Cargo.toml
@@ -270,4 +270,5 @@ codegen-units = 1  # Compile crates one after another so the compiler can optimi
 # Specific profile for labrinth production builds
 [profile.release-labrinth]
 inherits = "release"
+strip = false  # Keep debug symbols for Sentry
 panic = "unwind"  # Don't exit the whole app on panic in production
