--- a/packages/app-lib/Cargo.toml
+++ b/packages/app-lib/Cargo.toml
@@ -8,15 +8,18 @@ edition.workspace = true
 ariadne = { workspace = true }
 async-compression = { workspace = true, features = ["gzip", "tokio"] }
 async-recursion = { workspace = true }
-async-tungstenite = { workspace = true, features = ["tokio-runtime", "tokio-rustls-webpki-roots"] }
+async-tungstenite = { workspace = true, features = [
+  "tokio-runtime",
+  "tokio-rustls-webpki-roots"
+] }
 async-walkdir = { workspace = true }
 async_zip = { workspace = true, features = [
-	"bzip2",
-	"chrono",
-	"deflate",
-	"deflate64",
-	"tokio-fs",
-	"zstd",
+  "bzip2",
+  "chrono",
+  "deflate",
+  "deflate64",
+  "tokio-fs",
+  "zstd",
 ] }
 base64 = { workspace = true }
 bytemuck = { workspace = true, features = ["extern_crate_alloc"] }
@@ -36,7 +39,6 @@ enumset = { workspace = true }
 flate2 = { workspace = true }
 fs4 = { workspace = true, features = ["tokio"] }
 futures = { workspace = true, features = ["alloc", "async-await"] }
-parking_lot = { workspace = true }
 heck = { workspace = true }
 hickory-resolver = { workspace = true }
 indicatif = { workspace = true, optional = true }
@@ -44,6 +46,7 @@ itertools = { workspace = true }
 notify = { workspace = true }
 notify-debouncer-mini = { workspace = true }
 p256 = { workspace = true, features = ["ecdsa"] }
+parking_lot = { workspace = true }
 paste = { workspace = true }
 path-util = { workspace = true }
 phf = { workspace = true }
@@ -53,16 +56,16 @@ quick-xml = { workspace = true, features = ["async-tokio"] }
 rand = { workspace = true }
 regex = { workspace = true }
 reqwest = { workspace = true, features = [
-	"brotli",
-	"charset",
-	"deflate",
-	"gzip",
-	"http2",
-	"json",
-	"macos-system-configuration",
-	"multipart",
-	"rustls-tls-webpki-roots",
-	"stream",
+  "brotli",
+  "charset",
+  "deflate",
+  "gzip",
+  "http2",
+  "json",
+  "macos-system-configuration",
+  "multipart",
+  "rustls-tls-webpki-roots",
+  "stream",
 ] }
 rgb = { workspace = true }
 serde = { workspace = true, features = ["derive"] }
@@ -73,25 +76,25 @@ sha1_smol = { workspace = true }
 sha2 = { workspace = true }
 shlex = { workspace = true }
 sqlx = { workspace = true, features = [
-	"json",
-	"macros",
-	"migrate",
-	"runtime-tokio",
-	"sqlite",
-	"uuid",
+  "json",
+  "macros",
+  "migrate",
+  "runtime-tokio",
+  "sqlite",
+  "uuid",
 ] }
 sysinfo = { workspace = true, features = ["disk", "system"] }
 tauri = { workspace = true, features = ["unstable"], optional = true }
 tempfile = { workspace = true }
 thiserror = { workspace = true }
 tokio = { workspace = true, features = [
-	"fs",
-	"io-util",
-	"macros",
-	"net",
-	"process",
-	"sync",
-	"time",
+  "fs",
+  "io-util",
+  "macros",
+  "net",
+  "process",
+  "sync",
+  "time",
 ] }
 tokio-util = { workspace = true, features = ["compat", "io", "io-util", "time"] }
 tracing = { workspace = true }
