--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -35,6 +35,7 @@
 		"@storybook/vue3-vite": "^10.1.10",
 		"@stripe/stripe-js": "^7.3.1",
 		"@tailwindcss/vite": "^4.1.18",
+		"@types/lodash-es": "^4.17.12",
 		"@vitejs/plugin-vue": "^5.2.1",
 		"@vitest/browser-playwright": "^4.0.16",
 		"@vitest/coverage-v8": "^4.0.16",
@@ -53,8 +54,6 @@
 	},
 	"dependencies": {
 		"@codemirror/commands": "^6.3.2",
-		"intl-messageformat": "^10.7.7",
-		"vue-i18n": "^10.0.0",
 		"@codemirror/lang-markdown": "^6.2.3",
 		"@codemirror/language": "^6.9.3",
 		"@codemirror/state": "^6.3.2",
@@ -76,10 +75,13 @@
 		"floating-vue": "^5.2.2",
 		"fuse.js": "^6.6.2",
 		"highlight.js": "^11.9.0",
+		"intl-messageformat": "^10.7.7",
+		"lodash-es": "^4.17.23",
 		"markdown-it": "^13.0.2",
 		"postprocessing": "^6.37.6",
 		"qrcode.vue": "^3.4.1",
 		"three": "^0.172.0",
+		"vue-i18n": "^10.0.0",
 		"vue-multiselect": "3.0.0",
 		"vue-select": "4.0.0-beta.6",
 		"vue-typed-virtual-list": "^1.0.10",
