feat: use es-toolkit

--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -35,7 +35,6 @@
 		"@storybook/vue3-vite": "^10.1.10",
 		"@stripe/stripe-js": "^7.3.1",
 		"@tailwindcss/vite": "^4.1.18",
-		"@types/lodash-es": "^4.17.12",
 		"@vitejs/plugin-vue": "^5.2.1",
 		"@vitest/browser-playwright": "^4.0.16",
 		"@vitest/coverage-v8": "^4.0.16",
@@ -72,11 +71,11 @@
 		"ace-builds": "^1.43.5",
 		"apexcharts": "^4.0.0",
 		"dayjs": "^1.11.10",
+		"es-toolkit": "^1.44.0",
 		"floating-vue": "^5.2.2",
 		"fuse.js": "^6.6.2",
 		"highlight.js": "^11.9.0",
 		"intl-messageformat": "^10.7.7",
-		"lodash-es": "^4.17.23",
 		"markdown-it": "^13.0.2",
 		"postprocessing": "^6.37.6",
 		"qrcode.vue": "^3.4.1",
