refactor: project saving logic (#5225)
* fix: project data saving not visually shown immediately

* feat: useSavable improvements

* feat: migrate where possible to useSavable

* fix: gitignore

* feat: use es-toolkit

--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -53,8 +53,6 @@
 	},
 	"dependencies": {
 		"@codemirror/commands": "^6.3.2",
-		"intl-messageformat": "^10.7.7",
-		"vue-i18n": "^10.0.0",
 		"@codemirror/lang-markdown": "^6.2.3",
 		"@codemirror/language": "^6.9.3",
 		"@codemirror/state": "^6.3.2",
@@ -73,13 +71,16 @@
 		"ace-builds": "^1.43.5",
 		"apexcharts": "^4.0.0",
 		"dayjs": "^1.11.10",
+		"es-toolkit": "^1.44.0",
 		"floating-vue": "^5.2.2",
 		"fuse.js": "^6.6.2",
 		"highlight.js": "^11.9.0",
+		"intl-messageformat": "^10.7.7",
 		"markdown-it": "^13.0.2",
 		"postprocessing": "^6.37.6",
 		"qrcode.vue": "^3.4.1",
 		"three": "^0.172.0",
+		"vue-i18n": "^10.0.0",
 		"vue-multiselect": "3.0.0",
 		"vue-select": "4.0.0-beta.6",
 		"vue-typed-virtual-list": "^1.0.10",
