feat: i18n check for CI

--- a/.github/workflows/turbo-ci.yml
+++ b/.github/workflows/turbo-ci.yml
@@ -104,3 +104,14 @@ jobs:
         run: |
           pnpm turbo run intl:extract --force
           git diff --exit-code --color */*/src/locales/en-US/index.json
+
+      - name: 🌐 Check i18n in changed Vue files
+        if: github.event_name == 'pull_request'
+        run: |
+          git fetch origin ${{ github.base_ref }} --depth=1
+          CHANGED_FILES=$(git diff --name-only origin/${{ github.base_ref }}...HEAD -- '*.vue' | tr '\n' ' ')
+          if [ -n "$CHANGED_FILES" ]; then
+            pnpm scripts i18n-check-pr --base origin/${{ github.base_ref }} $CHANGED_FILES
+          else
+            echo "No Vue files changed"
+          fi
