--- a/apps/labrinth/.env.local
+++ b/apps/labrinth/.env.local
@@ -17,6 +17,8 @@ DATABASE_MAX_CONNECTIONS=16
 
 MEILISEARCH_READ_ADDR=http://localhost:7700
 MEILISEARCH_WRITE_ADDRS=http://localhost:7700
+# 5 minutes in milliseconds
+SEARCH_OPERATION_TIMEOUT=300000
 
 # # For a sharded Meilisearch setup (sharded-meilisearch docker compose profile)
 # MEILISEARCH_READ_ADDR=http://localhost:7710
