Implement minimum Redis connections

--- a/apps/labrinth/.env.docker-compose
+++ b/apps/labrinth/.env.docker-compose
@@ -19,6 +19,7 @@ MEILISEARCH_WRITE_ADDRS=http://localhost:7700
 MEILISEARCH_KEY=modrinth
 
 REDIS_URL=redis://labrinth-redis
+REDIS_MIN_CONNECTIONS=0
 REDIS_MAX_CONNECTIONS=10000
 
 BIND_ADDR=0.0.0.0:8000
