--- a/apps/labrinth/.env.local
+++ b/apps/labrinth/.env.local
@@ -25,6 +25,7 @@ MEILISEARCH_WRITE_ADDRS=http://localhost:7700
 MEILISEARCH_KEY=modrinth
 
 REDIS_URL=redis://localhost
+REDIS_MIN_CONNECTIONS=0
 REDIS_MAX_CONNECTIONS=10000
 
 # Must bind to broadcast, not localhost, because some
