Use deadpool fork with tracing (#5276)
* Use deadpool fork with tracing

* Implement minimum Redis connections

* fix typos maybe

* address pr comments

--- a/apps/labrinth/.env.local
+++ b/apps/labrinth/.env.local
@@ -27,6 +27,7 @@ SEARCH_OPERATION_TIMEOUT=300000
 MEILISEARCH_KEY=modrinth
 
 REDIS_URL=redis://localhost
+REDIS_MIN_CONNECTIONS=0
 REDIS_MAX_CONNECTIONS=10000
 
 # Must bind to broadcast, not localhost, because some
