--- a/.github/workflows/check-generic.yml
+++ b/.github/workflows/check-generic.yml
@@ -13,7 +13,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - uses: crate-ci/typos@1.43.1
+      - uses: crate-ci/typos@v1.43.1
 
   # see <https://github.com/influxdata/datafusion-udf-wasm/pull/275>
   tombi:
