update create version modal to hook up to backend

--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -69,6 +69,7 @@
 		"fuse.js": "^6.6.2",
 		"highlight.js": "^11.9.0",
 		"intl-messageformat": "^10.7.7",
+		"jszip": "^3.10.1",
 		"markdown-it": "^13.0.2",
 		"postprocessing": "^6.37.6",
 		"qrcode.vue": "^3.4.1",
