--- a/packages/blog/package.json
+++ b/packages/blog/package.json
@@ -18,6 +18,7 @@
 	},
 	"dependencies": {
 		"@modrinth/utils": "workspace:*",
+		"dayjs": "^1.11.10",
 		"glob": "^10.2.7",
 		"gray-matter": "^4.0.3",
 		"html-minifier-terser": "^7.2.0",
