--- a/.github/workflows/theseus-release.yml
+++ b/.github/workflows/theseus-release.yml
@@ -1,23 +1,19 @@
 name: Modrinth App release
 on:
-  workflow_dispatch:
-    inputs:
-      version-tag:
-        description: Version tag to release to the wide public
-        type: string
-        required: true
-      release-notes:
-        description: Release notes to include in the Tauri version manifest
-        default: A new release of the Modrinth App is available!
-        type: string
-        required: true
+  workflow_run:
+    workflows: ['Modrinth App build']
+    types: [completed]
 
 jobs:
   release:
     name: Release Modrinth App
+    if: >-
+      github.event.workflow_run.conclusion == 'success' &&
+      startsWith(github.event.workflow_run.head_branch, 'v')
     runs-on: ubuntu-latest
 
     env:
+      VERSION_TAG: ${{ github.event.workflow_run.head_branch }}
       LINUX_X64_BUNDLE_ARTIFACT_NAME: App bundle (x86_64-unknown-linux-gnu)
       WINDOWS_X64_BUNDLE_ARTIFACT_NAME: App bundle (x86_64-pc-windows-msvc)
       MACOS_UNIVERSAL_BUNDLE_ARTIFACT_NAME: App bundle (universal-apple-darwin)
@@ -41,8 +37,6 @@ jobs:
 
       - name: 📝 Extract changelog body
         id: changelog
-        env:
-          VERSION_TAG: ${{ inputs.version-tag }}
         run: |
           BODY=$(pnpm scripts bake-changelog -- --product app --version "${VERSION_TAG#v}" --extract)
           {
@@ -57,18 +51,15 @@ jobs:
           workflow: theseus-build.yml
           workflow_conclusion: success
           event: push
-          branch: ${{ inputs.version-tag }}
+          branch: ${{ env.VERSION_TAG }}
           use_unzip: true
 
       - name: 🛠️ Generate version manifest
-        env:
-          VERSION_TAG: ${{ inputs.version-tag }}
-          RELEASE_NOTES: ${{ inputs.release-notes }}
         run: |
           # Reference: https://tauri.app/plugin/updater/#server-support
           jq -nc \
             --arg versionTag "${VERSION_TAG#v}" \
-            --arg releaseNotes "$RELEASE_NOTES" \
+            --arg releaseNotes "${{ steps.changelog.outputs.body }}" \
             --rawfile macOsAarch64UpdateArtifactSignature "${MACOS_UNIVERSAL_BUNDLE_ARTIFACT_NAME}/universal-apple-darwin/release/bundle/macos/Modrinth App.app.tar.gz.sig" \
             --rawfile macOsX64UpdateArtifactSignature "${MACOS_UNIVERSAL_BUNDLE_ARTIFACT_NAME}/universal-apple-darwin/release/bundle/macos/Modrinth App.app.tar.gz.sig" \
             --rawfile linuxX64UpdateArtifactSignature "${LINUX_X64_BUNDLE_ARTIFACT_NAME}/release/bundle/appimage/Modrinth App_${VERSION_TAG#v}_amd64.AppImage.tar.gz.sig" \
@@ -110,7 +101,6 @@ jobs:
 
       - name: 📤 Upload release artifacts
         env:
-          VERSION_TAG: ${{ inputs.version-tag }}
           AWS_ACCESS_KEY_ID: ${{ secrets.LAUNCHER_FILES_BUCKET_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.LAUNCHER_FILES_BUCKET_SECRET_ACCESS_KEY }}
           AWS_BUCKET: ${{ secrets.LAUNCHER_FILES_BUCKET_NAME }}
@@ -147,7 +137,6 @@ jobs:
       - name: 🏷️ Create GitHub release
         env:
           GH_TOKEN: ${{ github.token }}
-          VERSION_TAG: ${{ inputs.version-tag }}
         run: |
           VERSION="${VERSION_TAG#v}"
 
