Make THESEUS_CONFIG_DIR work in dev mode

--- a/packages/app-lib/.env.local
+++ b/packages/app-lib/.env.local
@@ -4,6 +4,9 @@ MODRINTH_API_URL_V3=http://127.0.0.1:8000/v3/
 MODRINTH_SOCKET_URL=ws://127.0.0.1:8000/
 MODRINTH_LAUNCHER_META_URL=https://launcher-meta.modrinth.com/
 
+# Theseus config directory for development
+# THESEUS_CONFIG_DIR=
+
 # SQLite database file used by sqlx for type checking. Uncomment this to a valid path
 # in your system and run `cargo sqlx database setup` to generate an empty database that
 # can be used for developing the app DB schema
