--- a/apps/labrinth/.env.local
+++ b/apps/labrinth/.env.local
@@ -16,6 +16,9 @@ DATABASE_URL=postgresql://labrinth:labrinth@localhost/labrinth
 DATABASE_MIN_CONNECTIONS=0
 DATABASE_MAX_CONNECTIONS=16
 
+SEARCH_BACKEND=meilisearch
+
+# Meilisearch configuration
 MEILISEARCH_READ_ADDR=http://localhost:7700
 MEILISEARCH_WRITE_ADDRS=http://localhost:7700
 # 5 minutes in milliseconds
@@ -26,6 +29,11 @@ SEARCH_OPERATION_TIMEOUT=300000
 # MEILISEARCH_WRITE_ADDRS=http://localhost:7700,http://localhost:7701
 
 MEILISEARCH_KEY=modrinth
+MEILISEARCH_META_NAMESPACE=
+
+# Elasticsearch configuration
+ELASTICSEARCH_URL=http://localhost:9200
+ELASTICSEARCH_INDEX_PREFIX=labrinth
 
 REDIS_URL=redis://localhost
 REDIS_MIN_CONNECTIONS=0
